sass/custom.scss
#status-container {
	margin: 2rem 0 2rem;
	display: flex;
	flex-direction: row;
	place-items: center;

	#status-avatar {
		margin: 0 1rem 0 0;
		width: 4rem;
		height: 4rem;
		border-radius: 50%;
	}

	#statuscafe {
		background-color: var(--primary-color-alpha);
		border-radius: var(--rounded-corner);
		box-shadow: var(--edge-highlight);
		padding: 0.5rem;
		position: relative;
		width: 100%;

		&::after {
			border-bottom: 10px solid transparent;
			border-right: 10px solid var(--primary-color-alpha);
			border-top: 10px solid transparent;
			content: "";
			height: 0;
			inset: 50% auto 50% -10px;
			position: absolute;
			translate: 0 -50%;
			width: 0;
		}

		&-username {
			margin-bottom: 0.5rem;
			color: var(--fg-muted-5);
			font-size: 0.8rem;

			a {
				font-size: 1rem;
			}
		}

		&-content {
			font-weight: bold;
			color: var(--primary-color);
		}
	}
}

#about-splash {
	text-align: center;

	#about-avatar {
		background-color: white;
		border-color: white;
		border-radius: 50%;
		border-style: solid;
		border-width: 16px;
		display: inline-block;
		height: 128px;
		margin-bottom: 0;
		margin-top: 2rem;
		transition: var(--transition-longer);
		width: 128px;

		&:hover {
			border-radius: 50%;
			border-width: 2px;
			box-shadow: none;
			transform: scale(1.2);
		}
	}

	#about-header {
		color: var(--primary-color);
		font-family: var(--font-serif);
		font-style: italic;
		font-size: 4rem;
		font-weight: bold;
		letter-spacing: -0.15rem;
		transition: var(--transition-longer);

		&:hover {
			text-shadow: 0 3px 0 #f4e2cc, 0 6px 0 #f25242, 0 9px 0 #93bfb0, 0 12px 0 #f1d456;
			transform: translate(0, -12px);
		}

		@media (prefers-color-scheme: dark) {
			& {
				&:hover {
					text-shadow: 0 3px 0 #404a65, 0 6px 0 #f25242, 0 9px 0 #93bfb0, 0 12px 0 #f1d456;
				}
			}
		}
	}
}

#timeline {
	border-image-slice: 1;
	border-image-source: linear-gradient(to bottom, transparent 0px, var(--fg-muted-3) 0.5rem, var(--fg-muted-3) calc(100% - 0.5rem), transparent 100%);
	border-left: 0.25rem solid;
	list-style: none;
	padding-left: 0;

	li {
		padding-left: 1.5rem;

		small {
			transition: var(--transition);
		}

		&::before {
			background: var(--bg-color);
			border-radius: 50%;
			border: 0.25rem solid var(--fg-muted-3);
			content: "";
			display: block;
			height: 0.5rem;
			left: -2.1rem;
			position: relative;
			top: 1.35rem;
			transition: var(--transition);
			width: 0.5rem;
		}

		&:hover {
			small {
				color: var(--primary-color);
				text-shadow: var(--primary-color-alpha) 0 0 4px, var(--primary-color) 0 0 12px;
			}

			&::before {
				border: 0.25rem solid var(--primary-color);
				box-shadow: var(--primary-color-alpha) 0 0 4px, var(--primary-color) 0 0 12px;
			}
		}
	}
}

#clock {
	animation: clock-blink 1s infinite;
	background-color: var(--primary-color-alpha);
	border-radius: var(--rounded-corner-small);
	box-shadow: var(--edge-highlight);
	color: var(--primary-color);
	font-weight: bold;
	padding: 0.125rem 0.375rem;

	@keyframes clock-blink {
		from {
			color: var(--primary-color);
		}

		25% {
			color: var(--primary-color-alpha);
		}

		50% {
			color: var(--primary-color);
		}
	}

	@media (prefers-reduced-motion) {
		animation: none;
	}
}

#buttons-container {
	text-align: center;

	img {
		all: unset;
		display: inline;
	}
}

.media-grid {
	display: grid;
	gap: 2rem;
	grid-auto-flow: row;
	grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
	justify-items: center;
	margin: 1rem 0 1rem;
	padding: 0;
	text-align: center;

	img {
		border-radius: 0;
		box-shadow: none;
		display: block;
		margin: 0;
		max-width: 100%;
	}

	a {
		border-radius: var(--rounded-corner);
		padding: 0.75rem;
		text-decoration: none;
		transition: var(--transition-bezier);

		&:hover {
			background-color: var(--fg-muted-1);
			box-shadow: 0 0 0 8px var(--fg-muted-1);
			text-decoration: none;
		}
	}
}

section {

	&#original-icons,
	&#redrawn-icons,
	&#wallpapers {
		background-image: radial-gradient(circle, var(--fg-muted-1) 1px, transparent 1px);
		background-size: 1rem 1rem;
	}

	&#original-icons {
		background-color: rgba(98, 160, 234, 0.5);
	}

	&#redrawn-icons {
		background-color: rgba(87, 227, 137, 0.5);
	}

	&#wallpapers {
		background-color: rgba(255, 163, 72, 0.5);

		img {
			border-radius: var(--rounded-corner);
		}
	}
}

.drop-shadow {
	filter: drop-shadow(0 0.08rem 0.1rem rgba(0, 0, 0, 0.35)) drop-shadow(0 0.4rem 0.7rem rgba(0, 0, 0, 0.18));
	-webkit-filter: drop-shadow(0 0.08rem 0.1rem rgba(0, 0, 0, 0.35)) drop-shadow(0 0.4rem 0.7rem rgba(0, 0, 0, 0.18));
}

.emoji {
	all: unset;
	display: inline;
	height: 1.5em;
	vertical-align: middle;
	width: 1.5em;
}

